[IMP] UI layer for authentication, better separation
add a UiState model (Android guide)
update the code base to implement the UiState